fix no-image on safari

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -530,7 +530,7 @@ header
     float: left
     span
       font-family: 'LatoBold'
-      background: url('name-bar.png') no-repeat
+      background: url('/assets/name-bar.png') no-repeat
       width: 173px
       height: 29px
       display: block
@@ -1718,6 +1718,7 @@ span.switch-view
   border-radius: 50%
   -webkit-border-radius: 50%
   -moz-border-radius: 50%
+  -khtml-border-radius: 50%
   box-shadow: 0 0 8px rgba(0, 0, 0, .8)
   -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8)
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8)
@@ -1761,25 +1762,25 @@ span.switch-view
 .xxlarge,
 .title-xxlarge
   width: 240px
-  height: 240px
+  //height: 240px
 .xlarge,
 .title-xlarge
   width: 226px
-  height: 226px
+  //height: 226px
 .large,
 .title-large
   width: 185px
-  height: 185px
+  //height: 185px
 .medium,
 .title-medium
   width: 145px
-  height: 145px
+  //height: 145px
 .thumb,
 .title-thumb
   width: 100px
-  height: 100px
+  //height: 100px
 
 .small,
 .title-small
   width: 77px
-  height: 77px
+  //height: 77px
