--- a/app/assets/stylesheets/responsive_custom.css.scss
+++ b/app/assets/stylesheets/responsive_custom.css.scss
@@ -100,9 +100,8 @@
     height:190px;
   }
   #tab2 .users span{
-    background: url(../img/name-bars.png) no-repeat !important;
-  margin-left: 13px !important;
-  margin-top: -57px !important;
+    margin-left: 13px !important;
+    margin-top: -57px !important;
   }
   .r-arrow{
     margin-right:0px !important;
@@ -122,7 +121,6 @@
   }
 
   .users a span{
-    background:url(../img/name-bars.png) no-repeat !important;
     margin-left:4px !important;
   }
   .mis{
@@ -265,12 +263,9 @@
     width:150px;
     margin-left:10px
   }
-  .users a span{
-    background:url(../img/name-bars.png) no-repeat !important;
-  }
+
   #tab2 span {
     margin-top:-65px !important;
-    background:url(../img/name-barss.png) no-repeat !important;
   }
   .r-arrow{
     margin-right:0px !important;
